Bug #17415 special character tables are not handled correctly in ndb binlog/schema dist
Submitted: 15 Feb 2006 9:57 Modified: 16 Feb 2006 14:29
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1.7 src OS:
Assigned to: Tomas Ulin Target Version:

[15 Feb 2006 9:57] Tomas Ulin
Description:
2 mysqld with binlog
create an ndb table named e.g. `t#` - it will take a long time
look at the error log, you will se a timeout reported

How to repeat:
see above
[16 Feb 2006 2:29] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/2701
[16 Feb 2006 6:52] Tomas Ulin
pushed into 5.1.7
[16 Feb 2006 14:29] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented in 5.1.7 changelog. Closed.