Bug #17415 special character tables are not handled correctly in ndb binlog/schema dist